--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,8 @@
 ---
 name: SCGI
-version: 0.4
+version: 0.6
 author:
-  - Thomas Yandell L<mailto:tom+scgi@vipercode.com>
+  - 'Thomas Yandell L<mailto:tom+scgi@vipercode.com>'
 abstract: SCGI server library for perl
 license: perl
 requires:
@@ -10,7 +10,7 @@ requires:
 provides:
   SCGI:
     file: lib/SCGI.pm
-    version: 0.4
+    version: 0.6
   SCGI::Request:
     file: lib/SCGI/Request.pm
 generated_by: Module::Build version 0.26
